Tue Jun 11 23:01:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (validate_integer_pack_format): Refine error messages.

Tue Jun 11 22:25:04 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (validate_integer_pack_format): numwords argument added.
	  Move a varidation from rb_integer_pack_internal and rb_integer_unpack.
	  (rb_integer_pack_internal): Follow above change.
	  (rb_integer_unpack): Ditto.

Tue Jun 11 20:52:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack_internal): Renamed from rb_integer_pack
	  and overflow_2comp argument added.
	  (rb_integer_pack): Just call rb_integer_pack_internal.
	  (rb_integer_pack_2comp): New function.

	* internal.h (rb_integer_pack_2comp): Declared.

	* sprintf.c (rb_str_format): Use rb_integer_pack and
	  rb_integer_pack_2comp to format binary/octal/hexadecimal integers.
	  (ruby_digitmap): Declared.
	  (remove_sign_bits): Removed.
	  (BITSPERDIG): Ditto.
	  (EXTENDSIGN): Ditto.

Tue Jun 11 16:15:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_shrink_capa): shrink the capacity so it fits just with
	  the length.

	* array.c (ary_make_shared): release never used elements from frozen
	  array to be shared.  [ruby-dev:47416] [Bug #8510]

Tue Jun 11 12:49:01 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/re.rdoc: Rename to doc/regexp.rdoc
	* re.c: Update rdoc include for rename of file

Tue Jun 11 07:13:13 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* eval_error.c (error_print): keep that errat is non-shady object.
	  and guard errat from GC.

Tue Jun 11 05:04:25 2013  Benoit Daloze  <eregontp@gmail.com>

	* ext/racc/cparse/cparse.c: use rb_ary_entry() and
	  rb_ary_subseq() instead of RARRAY_PTR.
	  Based on a patch by Dirkjan Bussink. See Bug #8399.

Mon Jun 10 23:51:51 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* array.c (rb_ary_new_from_values): fix a typo. pointed out by
	  nagachika.
	  http://d.hatena.ne.jp/nagachika/20130610/ruby_trunk_changes_41199_41220
